@@ -1,14 +1,8 @@
 #include "bruter.h"
 
 //string functions
-char* str_duplicate(const char *str)
-{
-    char *dup = (char*)malloc(strlen(str) + 1);
-    strcpy(dup, str);
-    return dup;
-}
-
-char* str_nduplicate(const char *str, Int n)
+#ifdef _WIN32
+char* strndup(const char *str, Int n)
 {
     char *dup = (char*)malloc(n + 1);
     for (Int i = 0; i < n; i++)
@@ -18,17 +12,7 @@ char* str_nduplicate(const char *str, Int n)
     dup[n] = '\0';
     return dup;
 }
-
-char* str_sub(const char *str, Int start, Int end)
-{
-    char *sub = (char*)malloc(end - start + 1);
-    for (Int i = start; i < end; i++)
-    {
-        sub[i - start] = str[i];
-    }
-    sub[end - start] = '\0';
-    return sub;
-}
+#endif
 
 char* str_format(const char *format, ...)
 {
@@ -41,77 +25,6 @@ char* str_format(const char *format, ...)
     vsprintf(str, format, args);
     va_end(args);
     return str;
-}
-
-char* str_concat(const char *str1, const char *str2)
-{
-    char *str = (char*)malloc(strlen(str1) + strlen(str2) + 1);
-    strcpy(str, str1);
-    strcat(str, str2);
-    return str;
-}
-
-char* str_replace(const char *str, const char *substr, const char *replacement)
-{
-    const char *pos = strstr(str, substr);
-    if (!pos)
-    {
-        char *newstr = (char *)malloc(strlen(str) + 1);
-        strcpy(newstr, str);
-        return newstr;
-    }
-
-    size_t len_before = pos - str;
-    size_t substr_len = strlen(substr);
-    size_t replacement_len = strlen(replacement);
-    size_t new_len = strlen(str) - substr_len + replacement_len;
-
-    char *newstr = (char *)malloc(new_len + 1);
-
-    strncpy(newstr, str, len_before);
-    strcpy(newstr + len_before, replacement);
-    strcpy(newstr + len_before + replacement_len, pos + substr_len);
-
-    return newstr;
-}
-
-
-char* str_replace_all(const char *str, const char *substr, const char *replacement)
-{
-    size_t substr_len = strlen(substr);
-    size_t replacement_len = strlen(replacement);
-
-    size_t new_len = 0;
-    size_t count = 0;
-    for (const char *p = strstr(str, substr); p; p = strstr(p + substr_len, substr))
-    {
-        count++;
-        new_len += (p - str) - new_len;
-        new_len += replacement_len;
-        str = p + substr_len;
-    }
-    new_len += strlen(str);
-
-    char *newstr = (char *)malloc(new_len + 1);
-    char *dest = newstr;
-
-    str = str - new_len + strlen(newstr);
-    const char *p = strstr(str, substr);
-    while (p)
-    {
-        size_t len_before = p - str;
-        strncpy(dest, str, len_before);
-        dest += len_before;
-
-        strcpy(dest, replacement);
-        dest += replacement_len;
-
-        str = p + substr_len;
-        p = strstr(str, substr);
-    }
-    strcpy(dest, str);
-
-    return newstr;
 }
 
 StringList* special_space_split(char *str)
@@ -137,7 +50,7 @@ StringList* special_space_split(char *str)
                     count--;
                 }
             }
-            char *tmp = str_nduplicate(str + i, j - i + 1);
+            char *tmp = strndup(str + i, j - i + 1);
             list_push(*splited, tmp);
             i = j + 1;
         }
@@ -149,7 +62,7 @@ StringList* special_space_split(char *str)
             {
                 j++;
             }
-            char *tmp = str_nduplicate(str + i, j - i + 1);
+            char *tmp = strndup(str + i, j - i + 1);
             list_push(*splited, tmp);
             i = j + 1;
         }
@@ -161,7 +74,7 @@ StringList* special_space_split(char *str)
             {
                 j++;
             }
-            char *tmp = str_nduplicate(str + i, j - i + 1);
+            char *tmp = strndup(str + i, j - i + 1);
             list_push(*splited, tmp);
             i = j + 1;
         }
@@ -176,7 +89,7 @@ StringList* special_space_split(char *str)
             {
                 j++;
             }
-            list_push(*splited, str_nduplicate(str + i, j - i));
+            list_push(*splited, strndup(str + i, j - i));
             i = j;
         }
     }
@@ -215,71 +128,18 @@ StringList* special_split(char *str, char delim)
 
         if (str[i] == delim && !recursion && !inside_double_quotes && !inside_single_quotes)
         {
-            char* tmp = str_nduplicate(str + last_i, i - last_i);
+            char* tmp = strndup(str + last_i, i - last_i);
             list_push(*splited, tmp);
             last_i = i + 1;
         }
         else if (str[i + 1] == '\0')
         {
-            char* tmp = str_nduplicate(str + last_i, i - last_i + 1);
+            char* tmp = strndup(str + last_i, i - last_i + 1);
             list_push(*splited, tmp);
         }
 
         i++;
     }
-    return splited;
-}
-
-StringList* str_split(char *str, char *delim)
-{
-    StringList *splited = list_init(StringList);
-    
-    Int i = 0;
-    while (str[i] != '\0')
-    {
-        if (str[i] == delim[0])
-        {
-            i++;
-        }
-        else
-        {
-            Int j = i;
-            while (str[j] != delim[0] && str[j] != '\0')
-            {
-                j++;
-            }
-            list_push(*splited, str_nduplicate(str + i, j - i));
-            i = j;
-        }
-    }
-
-    return splited;
-}
-
-
-StringList* str_split_char(char *str, char delim)
-{
-    StringList *splited = list_init(StringList);
-
-    Int i = 0;
-    while (str[i] != '\0')
-    {
-        if (str[i] == delim)
-        {
-            i++;
-        }
-        else
-        {
-            Int j = i;
-            while (str[j] != delim && str[j] != '\0')
-            {
-                j++;
-            }
-            list_push(*splited, str_nduplicate(str + i, j - i));
-            i = j;
-        }
-    }
-
     return splited;
 }
 
@@ -340,7 +200,7 @@ Value value_duplicate(Value value, Byte type)
     switch (type)
     {
         case TYPE_ALLOC:
-            dup.s = str_duplicate(value.s);
+            dup.s = strdup(value.s);
             break;
         default:
             dup.i = value.i;
@@ -373,7 +233,7 @@ void hash_set(VirtualMachine *vm, char* varname, Int index)
     }
     else 
     {
-        list_push(*vm->hash_names, str_duplicate(varname));
+        list_push(*vm->hash_names, strdup(varname));
         list_push(*vm->hash_indexes, index);
     }
 }
@@ -397,79 +257,26 @@ VirtualMachine* make_vm()
     vm->typestack = list_init(ByteList);
     vm->hash_names = list_init(StringList);
     vm->hash_indexes = list_init(IntList);
-    vm->unused = list_init(IntList);
 
     // @0 = null
-    register_var(vm, "null");
+    register_var(vm, "null", 0, 0);
 
     return vm;
 }
 
 // var new 
-Int new_var(VirtualMachine *vm)
-{ 
-    if (vm->unused->size > 0)
-    {
-        return list_pop(*vm->unused);
-    }
-    else
-    {
-        Value value;
-        value.p = NULL;
-        list_push(*vm->stack, value);
-        list_push(*vm->typestack, TYPE_DATA);
-        return vm->stack->size-1;
-    }
+Int new_var(VirtualMachine *vm, Byte type, Int content)
+{
+    Value value;
+    value.i = content;
+    list_push(*vm->stack, value);
+    list_push(*vm->typestack, TYPE_DATA);
+    return vm->stack->size-1;
 }
 
-Int new_number(VirtualMachine *vm, Float number)
+Int register_var(VirtualMachine *vm, char* varname, Byte type, Int content)
 {
-    Int id = new_var(vm);
-    vm->stack->data[id].f = number;
-    vm->typestack->data[id] = TYPE_DATA;
-    return id;
-}
-
-Int new_string(VirtualMachine *vm, char *string)
-{
-    Int id = new_var(vm);
-    vm->stack->data[id].s = str_duplicate(string);
-    vm->typestack->data[id] = TYPE_ALLOC;
-    return id;
-}
-
-Int new_builtin(VirtualMachine *vm, Function function)
-{
-    Int id = new_var(vm);
-    vm->stack->data[id].p = function;
-    vm->typestack->data[id] = TYPE_DATA;
-    return id;
-}
-
-Int register_var(VirtualMachine *vm, char* varname)
-{
-    Int index = new_var(vm);
-    hash_set(vm, varname, index);
-    return index;
-}
-
-Int register_number(VirtualMachine *vm, char* varname, Float number)
-{
-    Int index = new_number(vm, number);
-    hash_set(vm, varname, index);
-    return index;
-}
-
-Int register_string(VirtualMachine *vm, char* varname, char* string)
-{
-    Int index = new_string(vm, string);
-    hash_set(vm, varname, index);
-    return index;
-}
-
-Int register_builtin(VirtualMachine *vm, char* varname, Function function)
-{
-    Int index = new_builtin(vm, function);
+    Int index = new_var(vm, type, content);
     hash_set(vm, varname, index);
     return index;
 }
@@ -495,8 +302,6 @@ void free_vm(VirtualMachine *vm)
     {
         free(list_pop(*vm->hash_names));
     }
-
-    list_free(*vm->unused);
 
     list_free(*vm->stack);
     list_free(*vm->typestack);
@@ -527,8 +332,8 @@ IntList* parse(void *_vm, char *cmd)
             {
                 char* temp = str + 2;
                 temp[strlen(temp) - 1] = '\0';
-                Int var = new_string(vm, temp);
-                list_push(*result, var);            
+                Int var = new_var(vm, TYPE_ALLOC, pun(strdup(temp), s, i));
+                list_push(*result, var);
             }
             else
             {
@@ -540,15 +345,25 @@ IntList* parse(void *_vm, char *cmd)
         }
         else if (str[0] == '"' || str[0] == '\'') // string
         {
-            char* temp = str_nduplicate(str + 1, strlen(str) - 2);
-            Int var = new_string(vm, temp);
+            char* temp = strndup(str + 1, strlen(str) - 2);
+            Int var = new_var(vm, TYPE_ALLOC, pun(temp, s, i));
             list_push(*result, var);
-            free(temp);
+            //free(temp);
         }
-        else if (isdigit(str[0]) || (str[0] == '-' && isdigit(str[1]))) // number
+        else if (isdigit(str[0]) || str[0] == '-') // number
         {
-            Int var = new_number(vm, atof(str));
-            list_push(*result, var);
+            if (strchr(str, '.')) // float
+            {
+                Float f = atof(str);
+                Int var = new_var(vm, TYPE_DATA, pun(strdup(str), s, i));
+                list_push(*result, var);
+            }
+            else // int
+            {
+                Int i = atol(str);
+                Int var = new_var(vm, TYPE_DATA, pun(strdup(str), s, i));
+                list_push(*result, var);
+            }
         }
         else //variable 
         {
@@ -671,19 +486,3 @@ Int eval(VirtualMachine *vm, char *cmd)
     list_free(*splited);
     return result;
 }
-
-void unuse_var(VirtualMachine *vm, Int index)
-{
-    switch (data_t(index))
-    {
-        case TYPE_ALLOC:
-            free(data(index).s);
-            break;
-        default:
-            break;
-    }
-    data(index).i = 0;
-    data_t(index) = TYPE_DATA;
-    list_push(*vm->unused, index);
-}
-
